     value on some platforms.
   * The color_adjust_blue_ attribute in [display] tags of saved games has
     been renamed to color_adjust_blue. Since it is only non-zero following a
     [color_adjust] action in a WML event, only mid-scenario saved games
     created with previous versions may present minor color issues after this
     change.

Version 1.11.7:
 * Add-ons client:
   * Add-ons downloaded with clients from this version onwards are shown
     in the Remove Add-ons with their original titles from the add-ons
     server now, instead of artificially generating titles by replacing
     underscores from file names.
   * Fixed color key disparities between the Add-ons Manager dialog and the
     add-on Description dialog.
   * It is now possible to choose the neutral/fallback add-on sorting in
     the Add-ons Manager dialog used when no columns have been sorted by
     the user.
   * Report errors caused by faulty local .pbl files properly instead of
     presenting them as network errors.
   * Fixed regression from 1.11.0 resulting in memory leaks and/or
     crash-to-desktop situations when failing to connect to an add-ons
     server.
 * Add-ons server:
   * Implemented read-only mode option (read_only boolean attribute in
     server config WML, defaults to "no").
 * AI:
   * Recruitment CA:
     * New Recruitment CA located in src/ai/recruitment is now default CA
     * Created new AI cfg "Strong AI (RCA)" with stronger recruitment
     * Created new AI cfg "Old Recruitment CA" in ai/dev/ to use the old CA
   * External CAs are now fully usable
     * The persistent data variable works and is accessible across CAs
     * Parameters can be passed to eval/exec functions
   * Micro AIs:
     * New Simple Attack Micro AI
     * All MAIs changed to using external CAs.  This means that no engine
       definitions are needed any more and that MAIs can be combined at will
     * Got rid of animal_type=, guardian_type=and recruiting_type= keys.  The