@@ -144,6 +144,9 @@ Version 1.11.7+dev:
      [color_adjust] action in a WML event, only mid-scenario saved games
      created with previous versions may present minor color issues after this
      change.
+   * Fixed sound sources removed while the sound effects volume is zero
+     (either in Preferences -> Sound or through the [volume] WML action)
+     persisting and escaping the sound source management code (bug #21426).
 
 Version 1.11.7:
  * Add-ons client:
